# android-thread-inspector

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  publish.sh  release-bintray.gradle  release.gradle.backup  settings.gradle  wip-issue.md
app/: build.gradle
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hookee.c
app/src/main/res/layout/: activity_main.xml
buildSrc/: build.gradle.kts
buildSrc/src/main/java/wtf/s1/buildsrc/: Configs.kt
gradle/: android-maven-install.gradle.backup  android-tasks.gradle  bintray.gradle
gradle/wrapper/: gradle-wrapper.properties
lib-epic/: build.gradle  gradle.properties
thread-bhook/: build.gradle  gradle.properties
thread-bhook/src/main/: AndroidManifest.xml
thread-bhook/src/main/cpp/: CMakeLists.txt  thread_call.cpp  thread_call.h  thread_call_monitor.cpp  thread_call_monitor.h  threadhook.cpp  threadhook.h
thread-bhook/src/main/cpp/third/: looper.cpp  str_util.h
thread-core/: build.gradle  gradle.properties
thread-core/src/main/: AndroidManifest.xml
thread-epic/: build.gradle  gradle.properties
thread-epic/src/main/: AndroidManifest.xml
thread-flipper/: build.gradle  gradle.properties
thread-flipper-desktop/flipper-plugin-s1-thread-inspector/: .gitignore  dev_readme.md  package.json  readme.md
thread-flipper-desktop/flipper-plugin-s1-thread-inspector/src/: index.tsx
thread-flipper/src/main/: AndroidManifest.xml
thread-plugin/: build.gradle  gradle.properties
thread-plugin/src/main/: AndroidManifest.xml
(+26 files in other folders)
